# Latent-Space-Reasoning

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  TROUBLESHOOTING.md  config.example.yaml  demo.py  evaluate_scievalkit.py  mcts_comparison_report.md  pyproject.toml
.venv_scievalkit/: pyvenv.cfg
checkpoints/scorer/: final_head.pt  head_epoch_2.pt
docs/mcts/: README.md
examples/: quick_start.py
examples/mcts/: compare_mcts_vs_evolution.py  comparison_report.md  quick_start.py
examples/test_results/: comparison_log.md  test10_game_theory.json  test11_syllogism.json  test12_lis_code.json  test13_causal.json  test14_constraint.json  test15_arithmetic.json  test16_water_jug.json  test17_sequence.json  test18_bat_ball.json  test19_legal_contract.json  test1_lru_cache.json  test20_ethical_dilemma.json  test21_paradox.json  test22_inheritance.json  test23_temporal.json  test24_fallacies.json  test25_alibi.json  test26_burden_proof.json  test27_counterfactual.json  test28_retaliation.json  test29_contract_damages.json  test2_logic_puzzle.json  test30_witness.json  test31_notice.json  test32_syllogism.json  test33_fda.json  test34_code_lock.json  test35_bridge_torch.json  test36_resource_schedule.json  test37_constrained_shortest_path.json  test38_stack_machine.json  test39_knights_knaves_two.json  test3_distributed_system.json  test40_number_theory_crt.json  test41_bag_probability.json  test42_logic_grid_houses.json  test43_water_jug_8_5.json  test4_vm_simple.json  test5_math.json  (+4 more)
experiments/: tricky_plan_2025_12_21.md
outputs/scievalkit_comparison/: comparison_report.md
outputs/scievalkit_comparison/Qwen3-0.6B-Baseline/: Qwen3-0.6B-Baseline_MaScQA_limit10.pkl  Qwen3-0.6B-Baseline_MaScQA_limit10_judge.xlsx  Qwen3-0.6B-Baseline_MaScQA_limit10_score.csv  Qwen3-0.6B-Baseline_MaScQA_limit10_tmp.pkl  Qwen3-0.6B-Baseline_MaScQA_partial.pkl
outputs/scievalkit_comparison/Qwen3-0.6B-LatentReasoning/: Qwen3-0.6B-LatentReasoning_MaScQA_limit10.pkl  Qwen3-0.6B-LatentReasoning_MaScQA_limit10_judge.xlsx  Qwen3-0.6B-LatentReasoning_MaScQA_limit10_score.csv  Qwen3-0.6B-LatentReasoning_MaScQA_limit10_tmp.pkl
src/latent_reasoning/: __init__.py  config.py  engine.py  reason.py
src/latent_reasoning/cli/: __init__.py  main.py
src/latent_reasoning/core/: __init__.py  chain.py  encoder.py  gemini_judge.py  heuristic_scorer.py  judge.py  latent_scorer.py  panel.py
src/latent_reasoning/eval/: __init__.py  arc_agi2.py  scievalkit_wrapper.py
src/latent_reasoning/evolution/: __init__.py  crossover.py  loop.py  mutation.py  (+2 more)
tests/: conftest.py  test_chain.py  test_config.py  test_evolution.py  test_mcts.py
tests/integration/: __init__.py  test_pipeline.py
(+16 files in other folders)
